--- a/app/src/main/res/layout/activity_placemark.xml
+++ b/app/src/main/res/layout/activity_placemark.xml
@@ -64,37 +64,52 @@
 
     <Button
       android:id="@+id/chooseImage"
-      android:layout_width="158dp"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp"
       android:text="@string/button_addImage"
+      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/description" />
 
     <Button
       android:id="@+id/placemarkLocation"
-      android:layout_width="167dp"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
+      android:layout_marginStart="8dp"
+      android:layout_marginTop="8dp"
       android:layout_marginEnd="8dp"
       android:text="@string/button_location"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/description" />
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/placemarkImage" />
 
     <ImageView
       android:id="@+id/placemarkImage"
+      android:layout_width="355dp"
+      android:layout_height="139dp"
+      android:layout_marginStart="8dp"
+      android:layout_marginTop="16dp"
+      android:layout_marginEnd="8dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/chooseImage"
+      app:srcCompat="@drawable/ic_launcher_background" />
+
+    <com.google.android.gms.maps.MapView
+      android:id="@+id/mapView"
       android:layout_width="0dp"
-      android:layout_height="0dp"
+      android:layout_height="163dp"
       android:layout_marginStart="8dp"
       android:layout_marginTop="8dp"
       android:layout_marginEnd="8dp"
       android:layout_marginBottom="8dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.555"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/placemarkLocation"
-      app:layout_constraintVertical_bias="0.173"
-      app:srcCompat="@drawable/ic_launcher_background" />
+      app:layout_constraintTop_toBottomOf="@+id/placemarkLocation" />
 
   </android.support.constraint.ConstraintLayout>
 
