--- a/app/src/main/res/layout-land/activity_placemark.xml
+++ b/app/src/main/res/layout-land/activity_placemark.xml
@@ -26,92 +26,66 @@
 
   <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
+    android:layout_height="match_parent">
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
-      android:id="@+id/placemarkTitle"
-      android:layout_width="266dp"
-      android:layout_height="44dp"
+    <include
+      android:id="@+id/details"
+      layout="@layout/placemark_details"
+      android:layout_width="393dp"
+      android:layout_height="97dp"
       android:layout_marginStart="8dp"
-      android:layout_marginTop="64dp"
-      android:ems="10"
-      android:hint="@string/hint_placemarkTitle"
-      android:inputType="text"
+      android:layout_marginTop="52dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-      android:id="@+id/description"
-      android:layout_width="0dp"
-      android:layout_height="44dp"
-      android:layout_marginStart="8dp"
-      android:layout_marginTop="64dp"
-      android:layout_marginEnd="8dp"
-      android:ems="10"
-      android:hint="@string/hint_placemarkDescription"
-      android:inputType="textPersonName"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toEndOf="@+id/placemarkTitle"
-      app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-      android:id="@+id/chooseImage"
-      android:layout_width="wrap_content"
-      android:layout_height="44dp"
-      android:layout_marginStart="16dp"
-      android:layout_marginTop="20dp"
-      android:layout_marginEnd="8dp"
-      android:text="@string/button_addImage"
-      app:layout_constraintEnd_toEndOf="@+id/placemarkTitle"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/placemarkTitle" />
-
-    <Button
-      android:id="@+id/placemarkLocation"
-      android:layout_width="wrap_content"
-      android:layout_height="44dp"
-      android:layout_marginTop="20dp"
-      android:text="@string/button_location"
-      app:layout_constraintEnd_toEndOf="@+id/description"
-      app:layout_constraintStart_toStartOf="@+id/description"
-      app:layout_constraintTop_toBottomOf="@+id/description" />
-
-    <ImageView
-      android:id="@+id/placemarkImage"
-      android:layout_width="0dp"
-      android:layout_height="190dp"
-      android:layout_marginStart="8dp"
-      android:layout_marginTop="8dp"
-      android:layout_marginEnd="8dp"
-      app:layout_constraintEnd_toStartOf="@+id/description"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/chooseImage"
-      app:srcCompat="@drawable/ic_launcher_background" />
-
-    <com.google.android.gms.maps.MapView
-      android:id="@+id/mapView"
-      android:layout_width="0dp"
-      android:layout_height="182dp"
-      android:layout_marginStart="8dp"
-      android:layout_marginTop="8dp"
-      android:layout_marginEnd="8dp"
-      app:layout_constraintEnd_toEndOf="@+id/description"
-      app:layout_constraintHorizontal_bias="0.0"
-      app:layout_constraintStart_toEndOf="@+id/placemarkTitle"
-      app:layout_constraintTop_toBottomOf="@+id/placemarkLocation" />
-
-    <androidx.constraintlayout.widget.Guideline
-      android:id="@+id/guideline"
-      android:layout_width="wrap_content"
+    <include
+      android:id="@+id/location"
+      layout="@layout/placemark_location"
+      android:layout_width="107dp"
       android:layout_height="wrap_content"
-      android:orientation="vertical"
-      app:layout_constraintGuide_begin="-154dp" />
+      android:layout_marginStart="8dp"
+      android:layout_marginTop="80dp"
+      android:layout_marginEnd="8dp"
+      android:layout_marginBottom="8dp"
+      app:layout_constraintBottom_toTopOf="@+id/position"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.485"
+      app:layout_constraintStart_toEndOf="@+id/details"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.031" />
 
+    <include
+      android:id="@+id/image"
+      layout="@layout/placemark_image"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:layout_marginStart="8dp"
+      android:layout_marginTop="8dp"
+      android:layout_marginEnd="8dp"
+      android:layout_marginBottom="8dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/position"
+      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/details" />
+
+    <include
+      android:id="@+id/position"
+      layout="@layout/placemark_position"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:layout_marginStart="8dp"
+      android:layout_marginTop="8dp"
+      android:layout_marginEnd="8dp"
+      android:layout_marginBottom="8dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toEndOf="@+id/details"
+      app:layout_constraintTop_toBottomOf="@+id/details"
+      app:layout_constraintVertical_bias="0.0" />
   </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
