rename all toolbars for simplicity

--- a/app/src/main/res/layout/activity_placemark_map.xml
+++ b/app/src/main/res/layout/activity_placemark_map.xml
@@ -15,7 +15,7 @@
     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
     <androidx.appcompat.widget.Toolbar
-      android:id="@+id/toolbarMaps"
+      android:id="@+id/toolbar"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:titleTextColor="@color/colorPrimary"/>
