--- a/app/src/main/res/layout/activity_placemark_list.xml
+++ b/app/src/main/res/layout/activity_placemark_list.xml
@@ -15,7 +15,7 @@
     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
     <androidx.appcompat.widget.Toolbar
-      android:id="@+id/toolbarMain"
+      android:id="@+id/toolbar"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:titleTextColor="@color/colorPrimary" />
